@@ -1687,8 +1687,10 @@ int dimension_door(object *op, object *caster, object *spob, int dir) {
     if ((op = object_insert_in_map_at(op, op->map, op, 0, op->x+freearr_x[dir]*dist, op->y+freearr_y[dir]*dist)) == NULL)
         return 1;
 
-    if (op->type == PLAYER)
+    if (op->type == PLAYER) {
         map_newmap_cmd(&op->contr->socket);
+        player_update_bg_music(op);
+    }
     op->speed_left = -FABS(op->speed)*5; /* Freeze them for a short while */
     return 1;
 }
