@@ -1,3 +1,6 @@
+2017-05-20	Kevin Zheng
+	* socket/sounds.c: Play region music if a map doesn't have music
+
 2017-02-18	Daniel Hawkins
 	* server/monster.c: Prevent monster_compute_path from being called for
 	  confused monsters.
